# Transport-sense

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  package-lock.json  test.hs  transport-emissions.cabal
app/: Main.hs
cli/: CLI.hs  Menu.hs
csvtojson/: Main.hs
data/: eu_transport.csv
docs/: architecture.md  dataset_description.md  formulas.md
documentation/: TransportSense_PFL.pptx
scotty-web/: CHANGELOG.md  package.yaml  package.yaml.save  scotty-web.cabal
scotty-web/app/: Web.hs
scotty-web/static/: analysis.json  dashboard.html  emissions_Africa.json  emissions_Antarctica.json  emissions_Asia.json  emissions_Australia.json  emissions_North_America.json  emissions_South_America.json  index.html  sign.html
src/: Analysis.hs  CityAggregation.hs  DatasetLoader.hs  EmissionCalculator.hs  EmissionEngine.hs  EnergyEngine.hs  JsonExport.hs  ModeAnalysis.hs  Models.hs  PolicyModel.hs  Preprocessing.hs  Ranking.hs  Sensitivity.hs  Simulation.hs  Statistics.hs  TrendAnalysis.hs  Types.hs  Utils.hs  package.json
test/: DatasetTest.hs  EmissionTest.hs  SimulationTest.hs
